--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -134,7 +134,7 @@ body {
   font-size: 0.8rem;
   margin: 0 2px;
   padding: 3px 5px;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 
 .markdown-section pre {
